Added dummy text

--- a/index.html
+++ b/index.html
@@ -4,27 +4,100 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Data Visualisation Project" />
-	<meta name="keywords" content="HTML, CSS, Javascript, JSON" />
+	<meta name="description" content="Data Visualisation Project 2023" />
+	<meta name="keywords" content="HTML, CSS" />
+	<meta name="authors" content="Hayden Tran, Rhyanna Arisya Zaharom" />
 
 	<title>Migration in Somalia Due to Acute Food Insecurity</title>
 	<script src="https://d3js.org/d3.v7.min.js"></script>
-	<script src="index.js"></script>
-
+	<script src="./index.js"></script>
+	<link rel="stylesheet" href="./index.css">
 
 </head>
 <body>
-
-	<h1>Migration in Somalia Due to Acute Food Insecurity</h1>
-	<br><br><br>
-	<p id="chart"></p>
-
-	<br><br><br>
-	<footer style="color:grey">
-    COS30045 Data Visualisation
-    <br>
-    Created by: Hayden Tran and Rhyanna Arisya Zaharom
-  </footer>
-
+    <div>
+        <div>
+            <div>
+                <h1>Migration in Somalia Due to Acute Food Insecurity</h1>
+                <div style="border: solid black .5px; " class="w-75 mx-auto"></div>
+            </div>
+        </div>
+        <div>
+            <h2>History of Somalia</h2>
+            <div class="card-body">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
+							consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
+							vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
+							lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
+							varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
+							elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
+							quam augue, varius vitae felis et, tristique malesuada nunc.
+            </div>
+        </div>
+        <div>
+					<h2>Visualisation 1</h2>
+            <div>
+                <span>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
+									consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
+									vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
+									lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
+									varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
+									elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
+									quam augue, varius vitae felis et, tristique malesuada nunc.
+								</span>
+            </div>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <h2>Visualisation 2</h2>
+                    <div>
+                        <span>
+													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
+													consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
+													vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
+													lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
+													varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
+													elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
+													quam augue, varius vitae felis et, tristique malesuada nunc.
+												</span>
+                    </div>
+                </div>
+                <div>
+                    <h2>Visualisation 3</h2>
+                    <div>
+                        <span>
+													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
+													consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
+													vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
+													lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
+													varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
+													elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
+													quam augue, varius vitae felis et, tristique malesuada nunc.
+												</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2>Conclusion</h2>
+                <span>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
+									consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
+									vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
+									lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
+									varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
+									elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
+									quam augue, varius vitae felis et, tristique malesuada nunc.
+                </span>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="text-center">
+            <p> Data Visualisation Project | 2023 </p>
+            <p> Created by Hayden Tran and Rhyanna Arisya Zaharom - TU1_G10</p>
+        </div>
+    </footer>
 </body>
 </html>
