Include Somalia map chart

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 				<div class="card">
 	        <div class="container" style="text-align:center">
 	            <h2>History of Somalia</h2>
-	            <div class="card-body">
+							<br>
+	            <div>
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
 								consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
 								vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
@@ -36,6 +37,7 @@
 								elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
 								quam augue, varius vitae felis et, tristique malesuada nunc.
 	            </div>
+							<br>
 	        </div>
 				</div>
 				<br><br>
@@ -44,7 +46,7 @@
 						<h2>Visualisation 1</h2>
 	            <div>
 								<p id="chart1"></p>
-	                <span>
+	                <span class="text1">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
 										consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
 										vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
@@ -64,7 +66,7 @@
 									<h2>Visualisation 2</h2>
 										<div>
 											<p id="chart2"></p>
-												<span>
+												<span class="text2">
 													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
 													consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
 													vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
@@ -82,7 +84,7 @@
 									<h2>Visualisation 3</h2>
 										<div>
 											<p id="chart3"></p>
-												<span>
+												<span class="text3">
 													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
 													consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
 													vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
@@ -96,7 +98,8 @@
 							</div>
 							<br><br>
             </div>
-            <div style="text-align:center">
+						<div class="card">
+							<div class="container" style="text-align:center">
                 <h2>Conclusion</h2>
                 <span>
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
@@ -107,6 +110,7 @@
 									elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
 									quam augue, varius vitae felis et, tristique malesuada nunc.
                 </span>
+							</div>
             </div>
         </div>
     </div>
