--- a/index.html
+++ b/index.html
@@ -10,115 +10,145 @@
 
 	<title>Migration in Somalia</title>
 	<script src="https://d3js.org/d3.v7.min.js"></script>
-	<script src="./index.js"></script>
+	<script src="index.js"></script>
 	<link rel="stylesheet" href="./index.css">
 	<link href="https://fonts.googleapis.com/css2?family=Arial" rel="stylesheet" />
 
 </head>
+
 <body>
-    <div>
-        <div>
-            <div style="text-align:center">
-                <h1>Migration in Somalia</h1>
-                <div style="border: solid black .5px; " class="w-75 mx-auto"></div>
-            </div>
-        </div>
-				<br><br>
-				<div class="card">
-	        <div class="container" style="text-align:center">
-	            <h2>History of Somalia</h2>
-							<br>
-	            <div>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
-								consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
-								vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
-								lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
-								varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
-								elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
-								quam augue, varius vitae felis et, tristique malesuada nunc.
-	            </div>
-							<br>
-	        </div>
+	<div>
+		<div>
+			<div style="text-align:center">
+				<h1>Migration in Somalia</h1>
+				<div style="border: solid black .5px; " class="w-75 mx-auto"></div>
+			</div>
+		</div>
+		<br><br>
+		<div class="card">
+			<div class="container" style="text-align:center">
+				<h2>History of Somalia</h2>
+				<br>
+				<div>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada
+					in,
+					consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
+					tristique mi,
+					vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac
+					tincidunt
+					lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit
+					quam
+					varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
+					elementum diam
+					elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
+					vestibulum. Quisque
+					quam augue, varius vitae felis et, tristique malesuada nunc.
 				</div>
-				<br><br>
-				<div class="card">
-					<div class="container" style="text-align:center">
-						<h2>Visualisation 1</h2>
-	            <div>
-								<p id="chart1"></p>
-	                <span class="text1">
-										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
-										consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
-										vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
-										lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
-										varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
-										elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
-										quam augue, varius vitae felis et, tristique malesuada nunc.
-									</span>
-	            </div>
-	        </div>
+				<br>
+			</div>
+		</div>
+		<br><br>
+		<div class="card">
+			<div class="container" style="text-align:center">
+				<h2>Visualisation 1</h2>
+				<div>
+					<p id="chart1"></p>
+					<span class="text1">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
+						malesuada in,
+						consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
+						tristique mi,
+						vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris,
+						ac tincidunt
+						lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam
+						blandit quam
+						varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
+						elementum diam
+						elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
+						vestibulum. Quisque
+						quam augue, varius vitae felis et, tristique malesuada nunc.
+					</span>
 				</div>
-				<br><br>
-        <div>
-            <div>
-							<div class="card">
-								<div class="container" style="text-align:center">
-									<h2>Visualisation 2</h2>
-										<div>
-											<p id="chart2"></p>
-												<span class="text2">
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
-													consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
-													vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
-													lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
-													varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
-													elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
-													quam augue, varius vitae felis et, tristique malesuada nunc.
-												</span>
-										</div>
-								</div>
-							</div>
-							<br><br>
-							<div class="card">
-								<div class="container" style="text-align:center">
-									<h2>Visualisation 3</h2>
-										<div>
-											<p id="chart3"></p>
-												<span class="text3">
-													Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
-													consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
-													vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
-													lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
-													varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
-													elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
-													quam augue, varius vitae felis et, tristique malesuada nunc.
-												</span>
-										</div>
-								</div>
-							</div>
-							<br><br>
-            </div>
-						<div class="card">
-							<div class="container" style="text-align:center">
-                <h2>Conclusion</h2>
-                <span>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed malesuada in,
-									consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et tristique mi,
-									vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris, ac tincidunt
-									lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam blandit quam
-									varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec elementum diam
-									elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id vestibulum. Quisque
-									quam augue, varius vitae felis et, tristique malesuada nunc.
-                </span>
-							</div>
-            </div>
-        </div>
-    </div>
-    <footer style="text-align:center">
-        <div>
-            <p> Data Visualisation Project | 2023 <br>
-							Created by Hayden Tran and Rhyanna Arisya Zaharom - TU1_G10</p>
-        </div>
-    </footer>
+			</div>
+		</div>
+		<br><br>
+		<div class="card">
+			<div class="container" style="text-align:center">
+				<h2>Visualisation 2</h2>
+				<div>
+					<p id="chart2"></p>
+					<span class="text2">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
+						malesuada in,
+						consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur.
+						Sed et tristique mi,
+						vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt
+						mauris, ac tincidunt
+						lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in.
+						Nam blandit quam
+						varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus,
+						nec elementum diam
+						elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus
+						id vestibulum. Quisque
+						quam augue, varius vitae felis et, tristique malesuada nunc.
+					</span>
+				</div>
+			</div>
+		</div>
+		<br><br>
+		<div class="card">
+			<div class="container" style="text-align:center">
+				<h2>Visualisation 3</h2>
+				<div>
+					<p id="chart3"></p>
+					<span class="text3">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
+						malesuada in,
+						consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur.
+						Sed et tristique mi,
+						vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt
+						mauris, ac tincidunt
+						lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in.
+						Nam blandit quam
+						varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus,
+						nec elementum diam
+						elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus
+						id vestibulum. Quisque
+						quam augue, varius vitae felis et, tristique malesuada nunc.
+					</span>
+				</div>
+			</div>
+		</div>
+		<br><br>
+
+		<div class="card">
+			<div class="container" style="text-align:center">
+				<h2>Conclusion</h2>
+				<span>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
+					malesuada in,
+					consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
+					tristique mi,
+					vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris,
+					ac tincidunt
+					lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam
+					blandit quam
+					varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
+					elementum diam
+					elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
+					vestibulum. Quisque
+					quam augue, varius vitae felis et, tristique malesuada nunc.
+				</span>
+			</div>
+		</div>
+
+	</div>
+	<footer style="text-align:center">
+		<div>
+			<p> Data Visualisation Project | 2023 <br>
+				Created by Hayden Tran and Rhyanna Arisya Zaharom - TU1_G10</p>
+		</div>
+	</footer>
 </body>
+
 </html>
