--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 			<div class="container" style="text-align:center">
 				<h2>Visualisation 1</h2>
 				<div>
-					<p id="chart1"></p>
+					<button onclick="changeYear(2017)">2017</button>
+					<button onclick="changeYear(2018)">2018</button>
+					<button onclick="changeYear(2019)">2019</button>
+				  <button onclick="changeYear(2020)">2020</button>
+				  <button onclick="changeYear(2021)">2021</button>
+				  <button onclick="changeYear(2022)">2022</button>
+				<p id="chart1"></p>
 					<span class="text1">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
 						malesuada in,
