--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<script src="https://d3js.org/d3.v7.min.js"></script>
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="./index.css">
-	<link href="https://fonts.googleapis.com/css2?family=Arial" rel="stylesheet" />
 
 </head>
 
@@ -52,13 +51,15 @@
 			<div class="container" style="text-align:center">
 				<h2>Visualisation 1</h2>
 				<div>
-					<button onclick="changeYear(2017)">2017</button>
-					<button onclick="changeYear(2018)">2018</button>
-					<button onclick="changeYear(2019)">2019</button>
-				  <button onclick="changeYear(2020)">2020</button>
-				  <button onclick="changeYear(2021)">2021</button>
-				  <button onclick="changeYear(2022)">2022</button>
-				<p id="chart1"></p>
+					<button class="year-btn" data-year="2017" id="year2017">2017</button>
+					<button class="year-btn" data-year="2018" id="year2018">2018</button>
+					<button class="year-btn" data-year="2019" id="year2019">2019</button>
+					<button class="year-btn" data-year="2020" id="year2020">2020</button>
+					<button class="year-btn" data-year="2021" id="year2021">2021</button>
+					<button class="year-btn" data-year="2022" id="year2022">2022</button>
+					<br><br>
+					<!-- <div class="regionLabel"><div>Current filtering by: <strong>All Regions</strong></div><a href="#" class="reset-btn small">RESET</a></div> -->
+				<div id="chart1"></div>
 					<span class="text1">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
 						malesuada in,
