--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<footer style="text-align:center">
 		<div>
 			<p> Data Visualisation Project | 2023 <br>
-				Created by Hayden Tran and Rhyanna Arisya Zaharom - TU1_G10</p>
+				Created by Hayden Tran and Rhyanna Arisya Zaharom | TU1_G10</p>
 		</div>
 	</footer>
 </body>
