--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
 	<meta name="keywords" content="HTML, CSS, JSON, JavaScript" />
 	<meta name="authors" content="Hayden Tran, Rhyanna Arisya Zaharom" />
 
-	<title>Migration in Somalia</title>
+	<title>Data Visualisation Project</title>
 	<script src="https://d3js.org/d3.v7.min.js"></script>
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="./index.css">
+	<link rel="icon" type="images/icon" href="images/migration_icon.png">
 
 </head>
 
 <body>
 	<div>
-		<div>
-			<div style="text-align:center">
-				<h1>Migration in Somalia</h1>
-				<div style="border: solid black .5px; " class="w-75 mx-auto"></div>
-			</div>
-		</div>
+		<header>
+				<h1>Food Insecurity-Driven Migration in Somalia</h1>
+		</header>
 		<br><br>
 		<div class="card">
 			<div class="container" style="text-align:center">
