--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 			<div class="container" style="text-align:center">
 				<h2>Visualisation 1</h2>
 				<div>
-					<button class="year-btn" data-year="2017" id="year2017">2017</button>
-					<button class="year-btn" data-year="2018" id="year2018">2018</button>
-					<button class="year-btn" data-year="2019" id="year2019">2019</button>
-					<button class="year-btn" data-year="2020" id="year2020">2020</button>
-					<button class="year-btn" data-year="2021" id="year2021">2021</button>
-					<button class="year-btn" data-year="2022" id="year2022">2022</button>
+					<button class="year-btn" data-year="2017">2017</button>
+					<button class="year-btn" data-year="2018">2018</button>
+					<button class="year-btn" data-year="2019">2019</button>
+					<button class="year-btn" data-year="2020">2020</button>
+					<button class="year-btn" data-year="2021">2021</button>
+					<button class="year-btn" data-year="2022">2022</button>
 					<br><br>
 					<!-- <div class="regionLabel"><div>Current filtering by: <strong>All Regions</strong></div><a href="#" class="reset-btn small">RESET</a></div> -->
 				<div id="chart1"></div>
