--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 		</div>
 		<br><br>
 		<div class="card">
-			<div class="container" style="text-align:center">
+			<div class="container">
 				<h2>Visualisation 1</h2>
 				<div>
 					<button onclick="changeYear(2017)">2017</button>
 					<button onclick="changeYear(2018)">2018</button>
 					<button onclick="changeYear(2019)">2019</button>
-				  <button onclick="changeYear(2020)">2020</button>
-				  <button onclick="changeYear(2021)">2021</button>
-				  <button onclick="changeYear(2022)">2022</button>
-				<p id="chart1"></p>
+					<button onclick="changeYear(2020)">2020</button>
+					<button onclick="changeYear(2021)">2021</button>
+					<button onclick="changeYear(2022)">2022</button>
+					<p id="chart1"></p>
 					<span class="text1">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
 						malesuada in,
@@ -79,7 +79,7 @@
 		</div>
 		<br><br>
 		<div class="card">
-			<div class="container" style="text-align:center">
+			<div class="container">
 				<h2>Visualisation 2</h2>
 				<div>
 					<p id="chart2"></p>
@@ -103,50 +103,76 @@
 		</div>
 		<br><br>
 		<div class="card">
-			<div class="container" style="text-align:center">
-				<h2>Visualisation 3</h2>
-				<div>
-					<p id="chart3"></p>
-					<span class="text3">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
-						malesuada in,
-						consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur.
-						Sed et tristique mi,
-						vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt
-						mauris, ac tincidunt
-						lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in.
-						Nam blandit quam
-						varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus,
-						nec elementum diam
-						elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus
-						id vestibulum. Quisque
-						quam augue, varius vitae felis et, tristique malesuada nunc.
-					</span>
+			<h2>Visualisation 3</h2>
+			<div id="container3">
+				<div id="chart3"></div>
+				<div class="text3">
+					<p>
+						Overall Increase: The CPI values generally show an upward trend over the period, indicating a
+						general increase in prices. This means that the cost of goods and services in Somalia has been
+						rising over time.
+						<br>
+						<br>
+						Higher Inflation: The CPI values in 2018 and 2019 experienced relatively higher increases, with
+						annual changes reaching double-digit percentages. This suggests higher inflation during these
+						years, meaning that the general price levels were rising rapidly.
+						<br>
+						<br>
+						Decrease and Stabilization: In the third quarter of 2020, there was a significant decrease in
+						the CPI, indicating a period of deflation or lower inflation. However, by the end of 2020 and
+						throughout 2021, the CPI started to rise again, although at a slower pace compared to previous
+						years.
+						<br>
+						<br>
+						Cost of Living: As the CPI increases, the cost of living also rises. This implies that
+						individuals and households need to allocate more financial resources to sustain their standard
+						of living. With higher prices for essential goods and services, such as food, housing, and
+						healthcare, it becomes more challenging for people to afford these necessities. Consequently,
+						economic hardships may arise, and individuals might contemplate migration as a means to seek
+						better economic opportunities or a lower cost of living elsewhere.
+						<br>
+						<br>
+						Economic Conditions: Inflationary pressures, as reflected by rising CPI values, often signify
+						economic instability. High inflation can erode individuals' purchasing power, reducing their
+						ability to make ends meet and potentially leading to a decline in savings. When economic
+						conditions deteriorate due to inflation, unemployment, or limited job opportunities, individuals
+						may feel compelled to migrate in search of better employment prospects and greater economic
+						stability.
+						<br>
+						<br>
+						Push and Pull Factors: Changes in CPI can act as both push and pull factors for migration.
+						Higher inflation and an increasing cost of living can push individuals away from their home
+						country, particularly if they struggle to afford basic necessities and experience a decline in
+						their overall standard of living. Conversely, individuals may be attracted to countries with
+						lower inflation rates or better economic conditions, where they perceive an improvement in their
+						living standards.
+					</p>
 				</div>
 			</div>
 		</div>
-		<br><br>
+	</div>
+	<br><br>
 
-		<div class="card">
-			<div class="container" style="text-align:center">
-				<h2>Conclusion</h2>
-				<span>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
-					malesuada in,
-					consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
-					tristique mi,
-					vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris,
-					ac tincidunt
-					lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam
-					blandit quam
-					varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
-					elementum diam
-					elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
-					vestibulum. Quisque
-					quam augue, varius vitae felis et, tristique malesuada nunc.
-				</span>
-			</div>
+	<div class="card">
+		<div class="container" style="text-align:center">
+			<h2>Conclusion</h2>
+			<span>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean urna nunc, pulvinar sed
+				malesuada in,
+				consequat sed erat. Nullam id congue neque. Pellentesque aliquam pretium consectetur. Sed et
+				tristique mi,
+				vel fringilla est. Donec consectetur, purus ac consequat euismod, nisl risus tincidunt mauris,
+				ac tincidunt
+				lectus purus nec tellus. Donec sodales dolor ipsum, sit amet faucibus lorem finibus in. Nam
+				blandit quam
+				varius nunc egestas, eget laoreet nisi tempus. Vivamus laoreet orci vitae risus rhoncus, nec
+				elementum diam
+				elementum. Vivamus convallis tempor odio malesuada congue. Praesent tempor auctor metus id
+				vestibulum. Quisque
+				quam augue, varius vitae felis et, tristique malesuada nunc.
+			</span>
 		</div>
+	</div>
 
 	</div>
 	<footer style="text-align:center">
